<?xml version="1.0"?>
<package format="2">
  <name>mppi_manipulation_royalpanda</name>
  <version>0.1.0</version>
  <description>mppi royapanda package</description>
  <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>mppi_ros</depend>
  <depend>manipulation_msgs</depend>
  <depend>mppi_manipulation</depend>
  <depend>mppi_pinocchio</depend>

  <depend>eigen</depend>
  <depend>roslib</depend>

  <depend>controller_interface</depend>
  <depend>franka_hw</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>franka</depend>
  <depend>kdl_parser</depend>
  <depend>eigen_conversions</depend>

  <export>
    <controller_interface plugin="${prefix}/plugins.xml"/>
  </export>
</package>
