<?xml version="1.0"?>
<package format="2">
    <name>mppi_omav_interaction</name>
    <version>0.1.0</version>
    <description>mppi package for an omnidirectional drone, with interaction</description>
    <maintainer email="studigem@student.ethz.ch">Matthias Studiger</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>eigen</depend>
    <depend>eigen_conversions</depend>
    <depend>mppi</depend>
    <depend>mppi_ros</depend>
    <depend>mppi_pinocchio</depend>
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>std_msgs</depend>
    <depend>mav_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf</depend>
    <depend>kdl_parser</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>raisim</depend>

</package>
